--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,13 @@ body,
 #root {
   height: 100%;
 }
+
+/* 스크롤바 숨기기 */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
+}
